initial commit for workout demo. adds react/jsx and backbone support, basic model structure for demo, and top-level react components. CJSX transpiler is borked, need to iron that out.

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,7 @@
 <%# add navigation links to this file %>
 <% if user_signed_in? %>
   <ul class="nav navbar-nav">
+    <li data-no-turbolink><%= link_to 'New Workout', new_workout_path %></li>
     <li><%= link_to 'Edit account', edit_user_registration_path %></li>
   </ul>
   <ul class="nav navbar-nav navbar-right">
